--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -7,9 +7,9 @@
     <title>01Minecraft</title>
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="/W_css/01Minecraft.css">
-    <link rel="stylesheet" media="all and (max-width: 1199px)" href="/W_css/01MinecraftT.css">
-    <link rel="stylesheet" media="all and (max-width: 899px)" href="/W_css/01MinecraftM.css">
+    <link rel="stylesheet" type="text/css" href="/ex/W_css/01Minecraft.css">
+    <link rel="stylesheet" media="all and (max-width: 1199px)" href="/ex/W_css/01MinecraftT.css">
+    <link rel="stylesheet" media="all and (max-width: 899px)" href="/ex/W_css/01MinecraftM.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
             </ul>
         </div>
         <nav>
-            <img src="/w_images/01minecraft/hamburger-icon.png" alt="hamburger" class="hamburger">
+            <img src="/ex/w_images/01minecraft/hamburger-icon.png" alt="hamburger" class="hamburger">
             <ul class="gnb">
                 <li><a href="#">뉴스</a></li>
                 <li>
@@ -65,7 +65,7 @@
                 <li><a href="#">고객지원</a></li>
             </ul>
             <a href="#" class="logo">
-                <img src="/images/Minecraft/logo_minecraft메인.png" alt="mainlogo">
+                <img src="/ex/images/Minecraft/logo_minecraft메인.png" alt="mainlogo">
             </a>
             <div class="login_start">
                 <a href="#">로그인</a>
@@ -81,15 +81,15 @@
             <div class="swiper gamecard">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="/w_images/01minecraft/Frame573.png" alt>
+                        <img src="/ex/w_images/01minecraft/Frame573.png" alt>
                         <button>둘러보기</button>
                     </div>
                     <div class="swiper-slide">
-                        <img src="/w_images/01minecraft/Frame574.png" alt>
+                        <img src="/ex/w_images/01minecraft/Frame574.png" alt>
                         <button>둘러보기</button>
                     </div>
                     <div class="swiper-slide">
-                        <img src="/w_images/01minecraft/Frame575.png" alt>
+                        <img src="/ex/w_images/01minecraft/Frame575.png" alt>
                         <button>둘러보기</button>
                     </div>
                 </div>
@@ -111,37 +111,37 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
@@ -161,17 +161,17 @@
                         <span>개발자PICK</span>
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="/w_images/01minecraft/image.avif" alt>
+                                <img src="/ex/w_images/01minecraft/image.avif" alt>
                                 <span>글분류항목</span>
                                 <h2>글제목1</h2>
                             </div>
                             <div class="swiper-slide">
-                                <img src="/w_images/01minecraft/image.avif" alt>
+                                <img src="/ex/w_images/01minecraft/image.avif" alt>
                                 <span>글분류항목</span>
                                 <h2>글제목1</h2>
                             </div>
                             <div class="swiper-slide">
-                                <img src="/w_images/01minecraft/image.avif" alt>
+                                <img src="/ex/w_images/01minecraft/image.avif" alt>
                                 <span>글분류항목</span>
                                 <h2>글제목1</h2>
                             </div>
@@ -187,7 +187,7 @@
                     <span>유저HOT</span>
                     <div class="hotbox">
                         <div class="back">
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목1</h2>
                                 <p>글, 이미지 설명 기입</p>
@@ -195,7 +195,7 @@
                             </div>
                         </div>
                         <div class="back">
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목2</h2>
                                 <p>글, 이미지 설명 기입</p>
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                         <div class="back">
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목3</h2>
                                 <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
@@ -211,7 +211,7 @@
                             </div>
                         </div>
                         <div class="back">
-                            <img src="/w_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목4</h2>
                                 <p>글, 이미지 설명 기입 글, 이미지 설명 기입</p>
@@ -245,14 +245,14 @@
         <div class="inner box02">
             <div class="box02-1">
                 <div>
-                    <img src="/images/Minecraft/Mojang2020Logo.png" alt="모장로고">
-                    <img src="/images/Minecraft/Logo_Xbox_Game_Studio.png" alt="Xbox로고">
+                    <img src="/ex/images/Minecraft/Mojang2020Logo.png" alt="모장로고">
+                    <img src="/ex/images/Minecraft/Logo_Xbox_Game_Studio.png" alt="Xbox로고">
                 </div>
                 <!-- <span>Mojang ©2009-2022. “Minecraft”는 Mojang Synergies AB의 상표입니다.</span> -->
                 <div>
                     <span>Mojang ©2009-2022. “Minecraft”는 Mojang Synergies AB의 상표입니다.</span>
                     <a href="#">Monjang이용 약관 보기</a>
-                    <img src="/w_images/01minecraft/bar.png" alt>
+                    <img src="/ex/w_images/01minecraft/bar.png" alt>
                     <a href="#">Mojang 브랜드 및 자산 가이드 보기</a>
                 </div>
             </div>
@@ -311,7 +311,7 @@
                 </div>
             </div>
             <div class="box02-3">
-                <img src="/w_images/01minecraft/게임이용등급.png" alt="게임심의등급">
+                <img src="/ex/w_images/01minecraft/게임이용등급.png" alt="게임심의등급">
             </div>
         </div>
         <div class="gloval">
@@ -356,7 +356,7 @@
             </div>
             <div>
                 <a href="#">
-                    <h3><img src="/w_images/01minecraft/마이크로소프트.png" alt="마이크로소프트"></h3>
+                    <h3><img src="/ex/w_images/01minecraft/마이크로소프트.png" alt="마이크로소프트"></h3>
                 </a>
             </div>
             <button class="scrollTopbt">상단으로 이동하기</button>
@@ -365,7 +365,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="/W_js/01Minecraft.js"></script>
+    <script src="/ex/W_js/01Minecraft.js"></script>
     <script>
         $(function () {
             $(window).scroll(function () {
