--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -48,7 +48,7 @@
             </ul>
         </div>
         <nav>
-            <img src="/ex/w_images/01minecraft/hamburger-icon.png" alt="hamburger" class="hamburger">
+            <button class="hamburger"></button>
             <ul class="gnb">
                 <li><a href="#">뉴스</a></li>
                 <li>
@@ -76,7 +76,7 @@
     <section class="inner">
         <!-- 정신차려! -->
         <h2>1</h2>
-        <article>
+        <article class="art01">
             <h5 class="start">공식적인 MINECRAFT 홈페이지가 아닙니다.<br> MOJANG에서 승인하거나 MOJANG과 연관되지 않습니다.</h5>
             <div class="swiper gamecard">
                 <div class="swiper-wrapper">
@@ -347,7 +347,7 @@
                     <span>언어변경</span>
                 </button>
             </div>
-            <div>
+            <div class="box03-2">
                 <a href="#">개인 정보 보호 및 쿠키</a>
                 <a href="#">사용 약관</a>
                 <a href="#">상표</a>
@@ -356,10 +356,10 @@
             </div>
             <div>
                 <a href="#">
-                    <h3><img src="/ex/w_images/01minecraft/마이크로소프트.png" alt="마이크로소프트"></h3>
+                    <h3><img src="ex/w_images/01minecraft/마이크로소프트.png" alt="마이크로소프트"></h3>
                 </a>
             </div>
-            <button class="scrollTopbt">상단으로 이동하기</button>
+            <button class="scrollTopbt"></button>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
