--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -65,7 +65,7 @@
                 <li><a href="#">고객지원</a></li>
             </ul>
             <a href="#" class="logo">
-                <img src="/ex/images/Minecraft/logo_minecraft메인.png" alt="mainlogo">
+                <img src="/ex/w_images/01minecraft/마크메인로고.png" alt="mainlogo">
             </a>
             <div class="login_start">
                 <a href="#">로그인</a>
