--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -49,23 +49,25 @@
         </div>
         <nav>
             <button class="hamburger"></button>
-            <ul class="gnb">
-                <li><a href="#">뉴스</a></li>
-                <li>
-                    <button>게임소개 <i class="fa-solid fa-chevron-down"></i></button>
-                    <ul class="sub">
-                        <li><a href="#">Minecraft</a></li>
-                        <li><a href="#">Minecraft Dungeons</a></li>
-                        <li><a href="#">Minecraft Legends</a></li>
-                        <li><a href="#">Minecraft Education</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">커뮤니티</a></li>
-                <li><a href="#">상품</a></li>
-                <li><a href="#">고객지원</a></li>
-            </ul>
+            <div class="gnb">
+                <ul class="gnbfamily">
+                    <li><a href="#">뉴스</a></li>
+                    <li>
+                        <button>게임소개 <i class="fa-solid fa-chevron-down"></i></button>
+                        <ul class="sub">
+                            <li><a href="#">Minecraft</a></li>
+                            <li><a href="#">Minecraft Dungeons</a></li>
+                            <li><a href="#">Minecraft Legends</a></li>
+                            <li><a href="#">Minecraft Education</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">커뮤니티</a></li>
+                    <li><a href="#">상품</a></li>
+                    <li><a href="#">고객지원</a></li>
+                </ul>
+            </div>
             <a href="#" class="logo">
-                <img src="/ex/w_images/01minecraft/마크메인로고.png" alt="mainlogo">
+                <img src="/ex/w_images/01minecraft/logo_minecraft메인.png" alt="mainlogo">
             </a>
             <div class="login_start">
                 <a href="#">로그인</a>
