--- a/01Minecraft.html
+++ b/01Minecraft.html
@@ -67,7 +67,7 @@
                 </ul>
             </div>
             <a href="#" class="logo">
-                <img src="/images/Minecraft/logo_minecraft메인.png" alt="mainlogo">
+                <img src="/ex/w_images/01minecraft/마크메인로고.png" alt="mainlogo">
             </a>
             <div class="login_start">
                 <a href="#">로그인</a>
@@ -83,15 +83,15 @@
             <div class="swiper gamecard">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="/ex/W_images/01minecraft/Frame573.png" alt>
+                        <img src="/ex/w_images/01minecraft/Frame573.png" alt>
                         <button>둘러보기</button>
                     </div>
                     <div class="swiper-slide">
-                        <img src="/ex/W_images/01minecraft/Frame574.png" alt>
+                        <img src="/ex/w_images/01minecraft/Frame574.png" alt>
                         <button>둘러보기</button>
                     </div>
                     <div class="swiper-slide">
-                        <img src="/ex/W_images/01minecraft/Frame575.png" alt>
+                        <img src="/ex/w_images/01minecraft/Frame575.png" alt>
                         <button>둘러보기</button>
                     </div>
                 </div>
@@ -113,37 +113,37 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
                         <div class="swiper-slide">
                             <span>글분류항목</span>
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <h2>제목</h2>
                             <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
                         </div>
@@ -163,17 +163,17 @@
                         <span>개발자PICK</span>
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="/ex/W_images/01minecraft/image.avif" alt>
+                                <img src="/ex/w_images/01minecraft/image.avif" alt>
                                 <span>글분류항목</span>
                                 <h2>글제목1</h2>
                             </div>
                             <div class="swiper-slide">
-                                <img src="/ex/W_images/01minecraft/image.avif" alt>
+                                <img src="/ex/w_images/01minecraft/image.avif" alt>
                                 <span>글분류항목</span>
                                 <h2>글제목1</h2>
                             </div>
                             <div class="swiper-slide">
-                                <img src="/ex/W_images/01minecraft/image.avif" alt>
+                                <img src="/ex/w_images/01minecraft/image.avif" alt>
                                 <span>글분류항목</span>
                                 <h2>글제목1</h2>
                             </div>
@@ -189,7 +189,7 @@
                     <span>유저HOT</span>
                     <div class="hotbox">
                         <div class="back">
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목1</h2>
                                 <p>글, 이미지 설명 기입</p>
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div class="back">
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목2</h2>
                                 <p>글, 이미지 설명 기입</p>
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                         <div class="back">
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목3</h2>
                                 <p>글, 이미지 설명 기입<br>글, 이미지 설명 기입</p>
@@ -213,7 +213,7 @@
                             </div>
                         </div>
                         <div class="back">
-                            <img src="/ex/W_images/01minecraft/image.avif" alt>
+                            <img src="/ex/w_images/01minecraft/image.avif" alt>
                             <div class="up">
                                 <h2>글제목4</h2>
                                 <p>글, 이미지 설명 기입 글, 이미지 설명 기입</p>
@@ -247,14 +247,14 @@
         <div class="inner box02">
             <div class="box02-1">
                 <div>
-                    <img src="/images/Minecraft/Mojang2020Logo.png" alt="모장로고">
-                    <img src="/images/Minecraft/Logo_Xbox_Game_Studio.png" alt="Xbox로고">
+                    <img src="/ex/w_images/01minecraft/Mojang2020Logo.png" alt="모장로고">
+                    <img src="/ex/w_images/01minecraft/Logo_Xbox_Game_Studio.png" alt="Xbox로고">
                 </div>
                 <!-- <span>Mojang ©2009-2022. “Minecraft”는 Mojang Synergies AB의 상표입니다.</span> -->
                 <div>
                     <span>Mojang ©2009-2022. “Minecraft”는 Mojang Synergies AB의 상표입니다.</span>
                     <a href="#">Monjang이용 약관 보기</a>
-                    <img src="/ex/W_images/01minecraft/bar.png" alt>
+                    <img src="/ex/w_images/01minecraft/bar.png" alt>
                     <a href="#">Mojang 브랜드 및 자산 가이드 보기</a>
                 </div>
             </div>
@@ -313,7 +313,7 @@
                 </div>
             </div>
             <div class="box02-3">
-                <img src="/ex/W_images/01minecraft/게임이용등급.png" alt="게임심의등급">
+                <img src="/ex/w_images/01minecraft/게임이용등급.png" alt="게임심의등급">
             </div>
         </div>
         <div class="gloval">
@@ -358,7 +358,7 @@
             </div>
             <div>
                 <a href="#">
-                    <h3><img src="/ex/W_images/01minecraft/마이크로소프트.png" alt="마이크로소프트"></h3>
+                    <h3><img src="/ex/w_images/01minecraft/마이크로소프트.png" alt="마이크로소프트"></h3>
                 </a>
             </div>
             <button class="scrollTopbt"></button>
