--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -67,7 +67,7 @@
                 </ul>
             </div>
             <a href="#" class="logo">
-                <img src="/ex/w_images/01minecraft/logo_minecraft메인.png" alt="mainlogo">
+                <img src="/ex/w_images/01minecraft/마크메인로고.png" alt="mainlogo">
             </a>
             <div class="login_start">
                 <a href="#">로그인</a>
