--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -8,8 +8,8 @@
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/ex/W_css/01Minecraft.css">
-    <link rel="stylesheet" media="all and (max-width: 1199px)" href="/ex/W_css/01MinecraftT.css">
-    <link rel="stylesheet" media="all and (max-width: 899px)" href="/ex/W_css/01MinecraftM.css">
+    <link rel="stylesheet" media="all and (max-width: 1200px)" href="/ex/W_css/01MinecraftT.css">
+    <link rel="stylesheet" media="all and (max-width: 900px)" href="/ex/W_css/01MinecraftM.css">
 </head>
 
 <body>
@@ -99,10 +99,10 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
                 <div class="autoplay-progress">
-                    <svg viewBox="0 0 48 48">
+                    <!-- <svg viewBox="0 0 48 48">
                         <circle cx="24" cy="24" r="20"></circle>
                     </svg>
-                    <span></span>
+                    <span></span> -->
                 </div>
             </div>
         </article>
