--- a/W_html/01Minecraft.html
+++ b/W_html/01Minecraft.html
@@ -316,7 +316,7 @@
                 <img src="/ex/w_images/01minecraft/게임이용등급.png" alt="게임심의등급">
             </div>
         </div>
-        <div class="gloval">
+        <div class="gloval02">
             <ul>
                 <li><a href="#">인도</a></li>
                 <li><a href="#">미국</a></li>
@@ -344,7 +344,7 @@
         </div>
         <div class="inner box03">
             <div>
-                <button class="Languages">
+                <button class="Languages02">
                     <i class="fa-solid fa-earth-asia"></i>
                     <span>언어변경</span>
                 </button>
